[package]
name = "zes-crypto-lib"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Quantum-safe zes-encryption implementation with multi-DID envelope support"
license = "ASL-1.0"
repository = "https://github.com/aln-sovereign/zes-crypto-lib"
documentation = "https://docs.rs/zes-crypto-lib"
keywords = ["crypto", "quantum-safe", "encryption", "multi-sig", "aln"]
categories = ["cryptography", "security", "encoding"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"

# Post-Quantum Cryptography
pqcrypto-kyber = { version = "0.1", optional = true }
pqcrypto-dilithium = { version = "0.1", optional = true }
pqcrypto-sphincs = { version = "0.1", optional = true }

# Signature Aggregation
bls-signature = { version = "0.15", optional = true }
frost-core = { version = "1.0", optional = true }

# Key Derivation
hkdf = "0.12"
argon2 = "0.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
rand = "0.8"

[lib]
name = "zes_crypto_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zes-envelope-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "crypto_performance"
harness = false

[features]
default = ["std", "quantum-safe"]
std = []
full-quantum = ["pqcrypto-kyber", "pqcrypto-dilithium", "pqcrypto-sphincs"]
quantum-safe = ["pqcrypto-kyber"]
multi-sig = ["bls-signature", "frost-core"]
offline-kdf = []
ffi-bindings = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "create_envelope"
path = "examples/create_envelope.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"
